--- a/exampleSite/data/en/about.yml
+++ b/exampleSite/data/en/about.yml
@@ -1,5 +1,10 @@
 ############################# About ###################################
 about:
   enable : true
-  title : About Inside Airbnb App
-  content: "Airbnb data provides a rich information of property rental, giving us the opportunity to analyse various structured variables such as rental price; geospatial components such as property location and proximity to transportation; and textual variables in form of reviews and listing description.Review is an essential piece of information not only for customer to decide if a product/service is worth their money, but also for providers to understand and improve their offer. Combined with geospatial data, this opens up different way of analysing review data, such as spatial distribution analysis. This may expose new insights, which may not be available from analysing textual data alone. Therefore, an interactive and integrated tool, capable of processing textual and geospatial data will allow comprehensive analysis of review data which plays an important role in various industries and applications."
+  title : About
+  about_item :
+  - icon : ti-dashboard # themify icon pack : https://themify.me/themify-icons
+    title : About Inside Airbnb App
+    content : Airbnb data provides a rich information of property rental, giving us the opportunity to analyse various structured variables such as rental price; geospatial components such as property location and proximity to transportation; and textual variables in form of reviews and listing description. Review is an essential piece of information not only for customer to decide if a product/service is worth their money, but also for providers to understand and improve their offer. Combined with geospatial data, this opens up different way of analysing review data, such as spatial distribution analysis. This may expose new insights, which may not be available from analysing textual data alone. Therefore, an interactive and integrated tool, capable of processing textual and geospatial data will allow comprehensive analysis of review data which plays an important role in various industries and applications. 
+
+ 
