--- a/exampleSite/data/en/team.yml
+++ b/exampleSite/data/en/team.yml
@@ -7,8 +7,8 @@ team:
     - name : Su Yiin Ang
       image_webp : images/team/team-1.webp
       image : images/team/team-1.jpg
-      designation : 
-      content : Currently a post-graduate student pursuing a Master of IT in Business (Analytics) at Singapore Management University. Before venturing into the world of analytics, I spent 6 years in the audit and financial due diligence departments at PwC Singapore.
+      designation : Master of IT in Business (Analytics) student @ SMU
+      content : Before venturing into the world of analytics, I spent 6 years in the audit and financial due diligence departments at PwC Singapore.
       social :
         - icon : ti-user # themify icon pack : https://themify.me/themify-icons
           link : "https://suyiinang.netlify.app/"
