--- a/exampleSite/data/en/application.yml
+++ b/exampleSite/data/en/application.yml
@@ -1,6 +1,6 @@
 ################################# Service #################################
 application:
-  enable : true
+  enable : false
   title : Our Application
   service_item :
     # service item loop
