--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -49,27 +49,21 @@ url = "about"
 weight = 1
 
 [[Languages.en.menu.main]]
-name = "application"
-pre = "#"
-url = "application"
-weight = 2
-
-[[Languages.en.menu.main]]
 name = "team"
 pre = "#"
 url = "team"
-weight = 3
+weight = 2
 
 [[Languages.en.menu.main]]
 name = "blog"
 pre = "#"
 url = "blog"
-weight = 4
+weight = 3
 
 
 ############################# Default Parameters ##########################
 [params]
-logo = ""
+logo = "images/logo.png"
 # Meta data
 description = ""
 author = ""
