--- a/exampleSite/data/en/banner.yml
+++ b/exampleSite/data/en/banner.yml
@@ -5,7 +5,7 @@ banner:
   bg_image : "images/backgrounds/background.jpg"
   icon : "" # themify icon pack : https://themify.me/themify-icons
   title : "The Sharing Application"
-  content : "An Interactive App for analysing Airbnb data using Text, Exploratory and Predictive Analytics."
+  content : "An Interactive App for analysing Airbnb Singapore using Text, Exploratory and Predictive Analytics."
   button:
     enable : true
     label : "Explore"
