--- a/exampleSite/data/en/team.yml
+++ b/exampleSite/data/en/team.yml
@@ -7,7 +7,7 @@ team:
     - name : Su Yiin Ang
       image_webp : images/team/team-1.webp
       image : images/team/team-1.jpg
-      designation : MITB (Analytics) student @ SMU
+      designation : MITB (Analytics) Student @ SMU
       content : Before venturing into the world of analytics, I spent 6 years in the audit and financial due diligence departments at PwC Singapore.
       social :
         - icon : ti-user # themify icon pack : https://themify.me/themify-icons
@@ -37,8 +37,8 @@ team:
     - name : Kevin Gunawan Albindo
       image_webp : images/team/team-3.webp
       image : images/team/team-3.jpg
-      designation : 
-      content : Write up
+      designation : Engineer in Asset and System Reliability @ SMRT
+      content : Engineer with passion for data-based decision making and continuous improvement of business process.
       social :
         - icon : ti-user # themify icon pack : https://themify.me/themify-icons
           link : "https://kgalbindo.netlify.app/"
