--- a/exampleSite/data/en/banner.yml
+++ b/exampleSite/data/en/banner.yml
@@ -5,7 +5,7 @@ banner:
   bg_image : "images/backgrounds/background.jpg"
   icon : "" # themify icon pack : https://themify.me/themify-icons
   title : "Our Shiny PET"
-  content : "A Predictive, Exploratory and Text Dashboard for Airbnb Data"
+  content : "A Predictive, Exploratory and Text Dashboard for Airbnb Singapore"
   button:
     enable : true
     label : "Explore"
