--- a/exampleSite/data/en/about.yml
+++ b/exampleSite/data/en/about.yml
@@ -9,7 +9,7 @@ about:
 
   - icon : ti-bar-chart # themify icon pack : https://themify.me/themify-icons
     title : Exploratory and Confirmatory
-    content : Explore, identify and augment findings using statistical methods.
+    content : Explore, identify and augment findings using automated statistical methods.
 
   - icon : ti-stats-up # themify icon pack : https://themify.me/themify-icons
     title : Predictive Analytics
