--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -49,7 +49,7 @@ url = "about"
 weight = 1
 
 [[Languages.en.menu.main]]
-name = "background"
+name = "overview"
 pre = "#"
 url = "feature"
 weight = 2
