--- a/exampleSite/data/en/feature.yml
+++ b/exampleSite/data/en/feature.yml
@@ -3,6 +3,6 @@ feature:
   enable : true
   image : "images/about/airbnb.png"
   image_webp : "images/about/airbnb.webp"
-  title : Overview
+  title : Project overview
   content : "The increasing availability of data has resulted in the increased demand for data driven decisions. Although there is an extensive range of commercial statistical tools, they are often subscription-based and demand good technical knowledge to mine and draw insights from. Therefore, it may not appeal to the average user. As such, our project aims to develop a user-friendly application that will enable users to make data-driven decisions without the need to understand programming languages or have extensive statistical knowledge. We will use Airbnb data as our baseline for this project as data generated is rich in information, which consists of structured, unstructured (textual), and location data."
   
