--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -43,7 +43,7 @@ link = "plugins/google-map/map.js"
 
 ################### English Navigation ########################
 [[Languages.en.menu.main]]
-name = "features"
+name = "feature"
 pre = "#"
 url = "about"
 weight = 2
@@ -74,7 +74,7 @@ logo = "images/logo.png"
 description = ""
 author = ""
 # Google Analytics
-google_analytics_id = "" # Your ID
+google_analytics_id = "UA-189162512-2" # Your ID
 # post share
 post_share = true
 
