update navigation using regEx

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -44,49 +44,41 @@ link = "plugins/google-map/map.js"
 ################### English Navigation ########################
 [[Languages.en.menu.main]]
 name = "about"
-pre = "#"
-url = "about"
+url = "#about"
 weight = 1
 
 [[Languages.en.menu.main]]
 name = "services"
-pre = "#"
-url = "services"
+url = "#services"
 weight = 2
 
 [[Languages.en.menu.main]]
 name = "portfolio"
-pre = "#"
-url = "portfolio"
+url = "#portfolio"
 weight = 3
 
 [[Languages.en.menu.main]]
 name = "team"
-pre = "#"
-url = "team"
+url = "#team"
 weight = 4
 
 [[Languages.en.menu.main]]
 name = "pricing"
-pre = "#"
-url = "pricing"
+url = "#pricing"
 weight = 5
 
 [[Languages.en.menu.main]]
 name = "blog"
-pre = "#"
-url = "blog"
+url = "#blog"
 weight = 6
 
 [[Languages.en.menu.main]]
 name = "contact"
-pre = "#"
-url = "contact"
+url = "#contact"
 weight = 7
 
 [[Languages.en.menu.main]]
 name = "themefisher"
-pre = ""
 url = "https://themefisher.com/"
 weight = 8
 
@@ -94,49 +86,41 @@ weight = 8
 ################### French Navigation ########################
 [[Languages.fr.menu.main]]
 name = "sur"
-pre = "#"
-url = "about"
+url = "#about"
 weight = 1
 
 [[Languages.fr.menu.main]]
 name = "un service"
-pre = "#"
-url = "services"
+url = "#services"
 weight = 2
 
 [[Languages.fr.menu.main]]
 name = "portefeuille"
-pre = "#"
-url = "portfolio"
+url = "#portfolio"
 weight = 3
 
 [[Languages.fr.menu.main]]
 name = "équipe"
-pre = "#"
-url = "team"
+url = "#team"
 weight = 4
 
 [[Languages.fr.menu.main]]
 name = "tarification"
-pre = "#"
-url = "pricing"
+url = "#pricing"
 weight = 5
 
 [[Languages.fr.menu.main]]
 name = "blog"
-pre = "#"
-url = "blog"
+url = "#blog"
 weight = 6
 
 [[Languages.fr.menu.main]]
 name = "contact"
-pre = "#"
-url = "contact"
+url = "#contact"
 weight = 7
 
 [[Languages.fr.menu.main]]
 name = "themefisher"
-pre = ""
 url = "https://themefisher.com/"
 weight = 8
 
