finally figured out the right syntax and shortcodes for custom image size and vimeo video embedding

--- a/paisley/data/en/team.yml
+++ b/paisley/data/en/team.yml
@@ -10,7 +10,7 @@ team:
     content: Digital Fellow
     social:
     - icon: ti-email
-      link: 'mailto: amir.ebrahimkhani@gmail.com'
+      link: 'mailto: amir@paisley.digital'
     - icon: ti-linkedin
       link: https://www.linkedin.com/in/aebrahimkhani/
   - name: Jahan
