--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -14,11 +14,11 @@ languageCode = "en-us"
 languageName = "En"
 weight = 1
 [[Languages.en.menu.main]]
-name = "les effets"
+name = "Les effets"
 url = "#services"
 weight = 2
 [[Languages.en.menu.main]]
-name = "portfolio"
+name = "Dormir sur place"
 url = "#portfolio"
 weight = 3
 [[Languages.en.menu.main]]
@@ -26,7 +26,7 @@ name = "team"
 url = "#team"
 weight = 4
 [[Languages.en.menu.main]]
-name = "pricing"
+name = "tarifs"
 url = "#pricing"
 weight = 5
 [[Languages.en.menu.main]]
@@ -37,10 +37,6 @@ weight = 6
 name = "contact"
 url = "#contact"
 weight = 7
-[[Languages.en.menu.main]]
-name = "themefisher"
-url = "https://themefisher.com/"
-weight = 8
 [Languages.fr]
 contentDir = "content/french"
 copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
