--- a/exampleSite/data/en/contact.yml
+++ b/exampleSite/data/en/contact.yml
@@ -13,7 +13,7 @@ contact:
   - icon: ti-location-pin
     info: 35 rue du Général Vauflaire, Thiais, France
   - icon: ti-mobile
-    info: 'Phone: +33-7-70-64-66-30'
+    info: 'Téléphone: +33-7-70-64-66-30'
   - icon: ti-email
     info: 'Email: jeflotteblog@gmail.com'
   contact_form:
