--- a/theme.toml
+++ b/theme.toml
@@ -1,7 +1,7 @@
 name = "Meghna Hugo"
 license = "MIT"
 licenselink = "https://github.com/themefisher/meghna-hugo/blob/master/LICENSE"
-description = "Hugo port of the Themefisher’s Meghna Template"
+description = "Meghna Hugo is a responsive, minimalist, lightweight, and fast loading one-page business theme built with HTML5/CSS3, Hugo, JavaScript, and JQuery."
 homepage = "https://gethugothemes.com/products/meghna-hugo-theme/"
 demosite = "https://demo.gethugothemes.com/meghna/"
 tags = ['landing-page', 'google-analytics', 'fast', 'modern', 'minimal', 'minimalistic', 'business', 'agency-template', 'themefisher', 'hugo-theme', 'hugo-templates', 'bootstrap', 'blog', 'responsive', 'portfolio', 'single-page', 'dark', 'clean', 'simple', 'company', 'creative', 'contact-form', 'custom-themes', 'mobile', 'gethugothemes']
