--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -133,3 +133,5 @@ link = "https://www.facebook.com/WiFi-Surveyseu-105280132434022"
 [[params.social]]
 icon = "ti-linkedin"
 link = "https://www.linkedin.com/company/wifi-surveys-eu"
+[blackfriday]
+  hrefTargetBlank = true
