--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -135,3 +135,4 @@ icon = "ti-linkedin"
 link = "https://www.linkedin.com/company/wifi-surveys-eu"
 [blackfriday]
   hrefTargetBlank = true
+enableRobotsTXT = true  
