--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,13 @@
 
 [[plugins]]
 package = "@netlify/plugin-sitemap"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  force = false[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  force = false
