--- a/exampleSite/data/en/team.yml
+++ b/exampleSite/data/en/team.yml
@@ -10,7 +10,7 @@ team:
     content: ''
     social:
     - icon: ti-link
-      link: https://www.ekahau.com/training/ecse-design/
+      link: <a href="https://www.ekahau.com/training/ecse-design/">
   - name: Cisco CCNP Enterprise (ENCOR)
     image_webp: images/team/CCNP.webp
     image: images/team/CCNP.jpg
@@ -36,3 +36,4 @@ team:
     social:
     - icon: ti-link
       link: https://www.cisco.com/c/en/us/training-events/training-certifications/training/training-services/courses/implementing-cisco-enterprise-wireless-networks-enwlsi.html
+
