--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -133,7 +133,12 @@ link = "https://www.facebook.com/WiFi-Surveyseu-105280132434022"
 [[params.social]]
 icon = "ti-linkedin"
 link = "https://www.linkedin.com/company/wifi-surveys-eu"
-[blackfriday]
-  hrefTargetBlank = true
+
 
 enableRobotsTXT = true
+
+
+[markup]
+defaultMarkdownHandler = 'blackFriday'
+[blackFriday]
+hrefTargetBlank = true
