--- a/exampleSite/data/en/contact.yml
+++ b/exampleSite/data/en/contact.yml
@@ -14,8 +14,6 @@ contact:
     info: 'Phone: +359889798313'
   - icon: ti-email
     info: 'Email: sales@wifi-surveys.eu'
-  - icon: ti-calendar
-    info: calendly.com/wifi-surveys-eu
   contact_form:
     enable: true
     form_action: https://formspree.io/f/xpznvbjl
@@ -25,3 +23,5 @@ contact:
     subject: Subject
     message: Message
     submit: Submit
+
+{{< youtube w7Ft2ymGmfc >}}
