--- a/exampleSite/data/en/team.yml
+++ b/exampleSite/data/en/team.yml
@@ -10,7 +10,7 @@ team:
     content: ''
     social:
     - icon: ti-link
-      link: (https://www.ekahau.com/training/ecse-design)
+    external link: (https://www.ekahau.com/training/ecse-design)
   - name: Cisco CCNP Enterprise (ENCOR)
     image_webp: images/team/CCNP.webp
     image: images/team/CCNP.jpg
