--- a/exampleSite/data/en/team.yml
+++ b/exampleSite/data/en/team.yml
@@ -10,7 +10,7 @@ team:
     content: ''
     social:
     - icon: ti-link
-    link: [Text] (https://www.ekahau.com/training/ecse-design "ECSE")
+    link: (https://www.ekahau.com/training/ecse-design "ECSE")
   - name: Cisco CCNP Enterprise (ENCOR)
     image_webp: images/team/CCNP.webp
     image: images/team/CCNP.jpg
