--- a/exampleSite/data/en/team.yml
+++ b/exampleSite/data/en/team.yml
@@ -10,7 +10,7 @@ team:
     content: ''
     social:
     - icon: ti-link
-    link: https://www.ekahau.com/training/ecse-design
+    link: [https://google.com](google.com "test2")
   - name: Cisco CCNP Enterprise (ENCOR)
     image_webp: images/team/CCNP.webp
     image: images/team/CCNP.jpg
