Replace twitter with Skype

--- a/site/data/en/team.yml
+++ b/site/data/en/team.yml
@@ -11,12 +11,12 @@ team:
       social :
         - icon : "ti-world" # themify icon pack : https://themify.me/themify-icons
           link : "https://tiksn.com/"
-        - icon : "ti-twitter-alt" # themify icon pack : https://themify.me/themify-icons
-          link : "https://twitter.com/tiksn"
         - icon : "ti-github" # themify icon pack : https://themify.me/themify-icons
           link : "https://github.com/tiksn"
         - icon : "ti-linkedin" # themify icon pack : https://themify.me/themify-icons
           link : "https://www.linkedin.com/in/tiksn"
+        - icon : "ti-skype" # themify icon pack : https://themify.me/themify-icons
+          link : "skype:akatiksn?chat"
 
     - name : "Ashot Nazaryan"
       image_webp : "images/team/ashot.webp"
