--- a/site/data/en/team.yml
+++ b/site/data/en/team.yml
@@ -22,7 +22,7 @@ team:
       image_webp : "images/team/ashot.webp"
       image : "images/team/ashot.jpg"
       designation : "Senior Frontend Developer"
-      content : I have **7** years of experience in software development
+      content : I am a Senior Front-End developer with **10** years of commercial experience in developing and maintaining web and mobile applications.
       social :
         - icon : "ti-skype" # themify icon pack : https://themify.me/themify-icons
           link : "skype:ashot0991?call"
